fiche_presentation_cynthia

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<h1>Présentation Cynthia</h1>
+<h1>Présentation Cynthia</h1> 
+<img src="assets/istockphoto-468583745-1024x1024.jpg" width="150" alt="p">
+<!-- phrase d'accroche -->
 <h3> "Elle saura coder vos pages aussi bien qu'elle garde vos chats" </h3>
-
+<!-- présentation globale-->
 <h2> qui est elle ?</h2>
 
 <ul>
@@ -12,13 +14,16 @@
     <li> frère/soeur: 1 frère et 1 soeur + vieille </li>
     <li>Animaux : 4 chats</li>
 </ul>
+<img src="assets/pexels-francesco-ungaro-96428.jpg" width="300"  alt="p">
 
+<!-- présentation du projet pro-->
 <h2>Son projet pro? </h2>
 
 <p> Cinthya vient d'une école de graphisme et imprimerie.
     Suite à cela elle a fait un service civique sur la sensibilisation à la santé mentale.
     A ce jours, elle est rentrée en formation à La TOILE ( EM Buisness school Lyon)
 </p>
+<img src="assets/pexels-suzyhazelwood-3656855.jpg" width="300" alt="p">
 <H2>Pourquoi la toile ?</H2>
 <p> Elle souhaite découvrir les metiers du numériques afin de s'orienter au mieux.</p>
 
@@ -26,6 +31,7 @@
 <p> 
     Après la toile elle souhaite poursuivre sur une alternance ou une formation UX/UI ou developpement Web
 </p>
+<!-- petite image qui la décrit-->
 
 <img src="assets/pexels-francesco-ungaro-96428.jpg" width="300"  alt="p">
 
