fiche_presentation_cynthia_2

--- a/index.html
+++ b/index.html
@@ -1,37 +1,108 @@
-<h1>Présentation Cynthia</h1> 
-<img src="assets/istockphoto-468583745-1024x1024.jpg" width="150" alt="p">
-<!-- phrase d'accroche -->
-<h3> "Elle saura coder vos pages aussi bien qu'elle garde vos chats" </h3>
-<!-- présentation globale-->
-<h2> qui est elle ?</h2>
+<!DOCTYPE html>
+<html lang="fr">
 
-<ul>
-    <li>Age : 24 ans </li>
-    <li>Ville: Firminy </li>
-    <li> Langue : Français , anglais A2</li>
-    <li>Hobbys: Musique , lecture </li>
-    <li>2 qualités: Calme, à l'écoute</li>
-    <li> frère/soeur: 1 frère et 1 soeur + vieille </li>
-    <li>Animaux : 4 chats</li>
-</ul>
-<img src="assets/pexels-francesco-ungaro-96428.jpg" width="300"  alt="p">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Presentation_cynthia</title>
+</head>
 
-<!-- présentation du projet pro-->
-<h2>Son projet pro? </h2>
+<header>
+    <img src="assets/logo-emlyon-01-2.png" width="150" alt="lyon">
+    <nav>
+        <ul>
+            <li>
+                <a href="#Description"> Description</a>
+            </li>
 
-<p> Cinthya vient d'une école de graphisme et imprimerie.
-    Suite à cela elle a fait un service civique sur la sensibilisation à la santé mentale.
-    A ce jours, elle est rentrée en formation à La TOILE ( EM Buisness school Lyon)
-</p>
-<img src="assets/pexels-suzyhazelwood-3656855.jpg" width="300" alt="p">
-<H2>Pourquoi la toile ?</H2>
-<p> Elle souhaite découvrir les metiers du numériques afin de s'orienter au mieux.</p>
+            <li>
+                <a href="#ProjetPro">Projet professionel</a>
+            </li>
 
-<h2> Et après? </h2>
-<p> 
-    Après la toile elle souhaite poursuivre sur une alternance ou une formation UX/UI ou developpement Web
-</p>
-<!-- petite image qui la décrit-->
+            <li>
+                <a href="#PourquoiLaToile"> Pourquoi la Toile</a>
+            </li>
+            <li>
+                <a href="#etAprès">Et après</a>
+            </li>
+        </ul>
+    </nav>
 
-<img src="assets/pexels-francesco-ungaro-96428.jpg" width="300"  alt="p">
+</header>
 
+<body>
+
+    <!-- Titre H1 -->
+    <h1> <strong>Présentation Cynthia</strong> </h1>
+
+    <!-- phrase d'accroche -->
+    <div>
+        <h3> "Elle saura coder vos pages aussi bien qu'elle garde vos chats" </h3>
+    </div>
+
+    <div>
+        <!-- présentation globale-->
+        <section id="Description">
+        </section>
+
+        <h2> qui est elle ?</h2>
+    </div>
+
+    <div>
+        <ul>
+            <li> <strong>Age :</strong>  24 ans </li>
+            <li> <strong>Ville:</strong> Firminy </li>
+            <li> <strong>Langue</strong> français , anglais A2</li>
+            <li> <strong>Hobbys:</strong> Musique , lecture </li>
+            <li> <strong>2 qualités</strong>: Calme, à l'écoute</li>
+            <li> <strong>frère/soeur:</strong> 1 frère et 1 soeur + vieille </li>
+            <li> <strong>Animaux</strong> : 4 chats</li>
+        </ul>
+
+        <img src="assets/pexels-francesco-ungaro-96428.jpg" width="150" alt="chat">
+        <img src="assets/musique.jpg" width="150" alt="musique">
+        <img src="assets/livre.jpg" width="150" alt="livre">
+    </div>
+
+    <!-- présentation du projet pro-->
+    <div>
+        <section id="ProjetPro">
+        </section>
+
+        <h2>Son projet pro? </h2>
+        <p> Cinthya vient d'une école de graphisme et imprimerie.
+            Suite à cela elle a fait un service civique sur la sensibilisation à la santé mentale.
+            A ce jours, elle est rentrée en formation à La TOILE ( EM Buisness school Lyon)
+        </p>
+
+        <img src="assets/pexels-suzyhazelwood-3656855.jpg" width="200" alt="anxiété">
+        <img src="assets/graphisme.jpg" width="200" alt="graphisme">
+    </div>
+
+    <!-- Pourquoi la toile -->
+    <div>
+        <Section id="PourquoiLaToile">
+
+        </Section>
+        <H2>Pourquoi la toile ?</H2>
+        <p> Elle souhaite découvrir les metiers du numériques afin de s'orienter au mieux.
+        </p>
+    </div>
+
+    <!-- et apres? -->
+    <section id="etAprès">
+    </section>
+
+    <div>
+        <h2> Et après? </h2>
+        <p>
+            Après la toile elle souhaite poursuivre sur une alternance ou une formation UX/UI ou developpement Web
+        </p>
+        <img src="assets/dev web.jpg" width="200" alt="dew web ">
+        <img src="assets/ux ui.jpg" width="200" alt="ux">
+    </div>
+    <footer>
+    </footer>
+
+</body>
+</html>
