fiche_presentation_cynthia

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentation_cynthia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <header>
@@ -37,7 +38,9 @@
 
     <!-- phrase d'accroche -->
     <div>
-        <h3> "Elle saura coder vos pages aussi bien qu'elle garde vos chats" </h3>
+        <h3><em>"Elle saura coder vos pages aussi bien qu'elle garde vos chats" </h3> </em>
+    
+    </div>
     </div>
 
     <div>
@@ -45,7 +48,7 @@
         <section id="Description">
         </section>
 
-        <h2> qui est elle ?</h2>
+        <h2 class="rouge"> qui est elle ?</h2>
     </div>
 
     <div>
@@ -69,7 +72,7 @@
         <section id="ProjetPro">
         </section>
 
-        <h2>Son projet pro? </h2>
+        <h2 classe="rouge">Son projet pro? </h2>
         <p> Cinthya vient d'une école de graphisme et imprimerie.
             Suite à cela elle a fait un service civique sur la sensibilisation à la santé mentale.
             A ce jours, elle est rentrée en formation à La TOILE ( EM Buisness school Lyon)
@@ -84,7 +87,7 @@
         <Section id="PourquoiLaToile">
 
         </Section>
-        <H2>Pourquoi la toile ?</H2>
+        <H2 class="rouge">Pourquoi la toile ?</H2>
         <p> Elle souhaite découvrir les metiers du numériques afin de s'orienter au mieux.
         </p>
     </div>
@@ -94,7 +97,7 @@
     </section>
 
     <div>
-        <h2> Et après? </h2>
+        <h2 class="rouge"> Et après? </h2>
         <p>
             Après la toile elle souhaite poursuivre sur une alternance ou une formation UX/UI ou developpement Web
         </p>
