fiche_presentation_cynthia

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="ProjetPro">
         </section>
 
-        <h2 classe="rouge">Son projet pro? </h2>
+        <h2 class="rouge"> Son projet pro? </h2>
         <p> Cinthya vient d'une école de graphisme et imprimerie.
             Suite à cela elle a fait un service civique sur la sensibilisation à la santé mentale.
             A ce jours, elle est rentrée en formation à La TOILE ( EM Buisness school Lyon)
